Fix spacing

--- a/assets/scss/partial/footer.scss
+++ b/assets/scss/partial/footer.scss
@@ -21,7 +21,7 @@
     vertical-align: middle;
 
     a {
-      margin-right: 15px;
+      margin-right: 20px;
     }
   }
   li:last-child {
